rename container class to wrap, avoiding future conflicts

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,7 +77,7 @@ h1 {
   height: 100%;
 }
 
-.container {
+.about-wrap {
   margin-top: 1.5em;
   height: 100%;
 }
@@ -159,7 +159,7 @@ form label {
 }
 
 form input {
-  padding-left: 10px;
+  text-indent: 10px;
   font-size: 1.2em;
   height: 2em;
   width: 100%;
@@ -177,13 +177,10 @@ form button {
 }
 
 #message {
-  padding-left: 10px;
+  text-indent: 10px;
   font-size: 1.2em;
   width: 100%;
   height: 14em;
-}
-
-#contactBtn {
 }
 
 .port-img {
